# hneu

./: .gitignore  main.py  pyproject.toml
notebooks/: category_clustering_metrics.csv  cluster_assignments.csv  country_category_vectors.csv  csv_conversion.ipynb  xlsx_clean.ipynb
notebooks/clustering_results/: FY2018_category_metrics.csv  FY2018_detailed_results.csv  FY2018_output.txt  FY2019_output.txt
